# dotfonts

./: README.md  compile.bash  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: com.github.aimproxy.dotfonts.appdata.xml.in  com.github.aimproxy.dotfonts.desktop.in  com.github.aimproxy.dotfonts.gresource.xml  com.github.aimproxy.dotfonts.gschema.xml  meson.build
data/css/: Application.css
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  com.github.aimproxy.dotfonts.pot  fr.po  nl.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
src/: Application.vala  Main.vala  meson.build
src/Configs/: Constants.vala  Settings.vala
src/Services/: Downloader.vala  Gapi.vala
src/Views/: FontInfo.vala  FontList.vala  FontView.vala  Sidebar.vala  WelcomeView.vala
src/Widgets/: FontDownloadListRow.vala  FontListRow.vala  HeaderBar.vala
src/Windows/: MainWindow.vala
src/configs/: Constants.vala
src/widgets/: HeaderBar.vala
src/windows/: MainWindow.vala
