sources += files(
  'Configs/Constants.vala',
  'Configs/Settings.vala',

  'Windows/MainWindow.vala',

  'Services/Gapi.vala',

  'Widgets/HeaderBar.vala',
  'Widgets/FontListRow.vala',

  'Views/Sidebar.vala',
  'Views/FontView.vala',
  'Views/WelcomeView.vala',

  'Application.vala',
  'Main.vala'
)
