sources = files(
  'Configs/Constants.vala',
  'Configs/Settings.vala',
  'Windows/MainWindow.vala',
  'Services/Gapi.vala',
  'Services/Downloader.vala',
  'Widgets/HeaderBar.vala',
  'Widgets/FontListRow.vala',
  'Widgets/FontDownloadListRow.vala',
  'Views/Sidebar.vala',
  'Views/FontInfo.vala',
  'Application.vala',
  'Main.vala'
)
